--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "dependencies": {
     "http-server": "^0.9.0",
     "protractor": "^4.0.3"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2"
   }
 }
